bizinikiwi/pezframe/support/test/tests/pezpallet_ui/trait_invalid_item.stderr
error: Invalid #[pezpallet::constant] in #[pezpallet::config], expected type item
  --> tests/pezpallet_ui/trait_invalid_item.rs:26:3
   |
26 |         const U: u8 = 3;
   |         ^^^^^
